--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
 			<nav>
 				<ul>
 					<li>
-						<button class="nav-btn" onclick="goToSlide(0)">Maqolalar</button>
+						<button class="nav-btn" onclick="goToSlide(0)">Sitata</button>
 					</li>
 					<li>
-						<button class="nav-btn" onclick="goToSlide(1)">Lirika</button>
+						<button class="nav-btn" onclick="goToSlide(1)">Musiqa</button>
 					</li>
 					<li>
-						<button class="nav-btn" onclick="goToSlide(2)">Videolar</button>
+						<button class="nav-btn" onclick="goToSlide(2)">Video</button>
 					</li>
 				</ul>
 			<nav>
